Metrics and notebook updates.

--- a/RNN/aud_RNN.ipynb
+++ b/RNN/aud_RNN.ipynb
@@ -48,33 +48,13 @@
     "N_CLASSES = 50\n",
     "\n",
     "# Hyper Parameters\n",
-    "H_UNITS = 256\n",
+    "L1_UNITS = 1024\n",
+    "L2_UNITS = 1024\n",
     "BATCH_SIZE = 128\n",
-    "EPOCHS = 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1500, 1, 135)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "aud_X_train, aud_y_train, aud_X_test, aud_y_test = readDataFile(AUDIO_DATA)\n",
-    "# aud_X_train = aud_X_train.reshape(aud_X_train.shape[0], ROWS, COLS)\n",
-    "aud_X_train = aud_X_train.reshape(-1, ROWS, COLS)\n",
-    "aud_X_test = aud_X_test.reshape(-1, ROWS, COLS)\n",
-    "aud_X_train.shape"
+    "EPOCHS = 100\n",
+    "DROPOUT = (.25, .5)\n",
+    "\n",
+    "np.random.seed(10)"
    ]
   },
   {
@@ -93,12 +73,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aud_X_train, aud_y_train, aud_X_test, aud_y_test = readDataFile(AUDIO_DATA)\n",
+    "aud_Y_train = keras.utils.to_categorical(aud_y_train, N_CLASSES)\n",
+    "aud_Y_test = keras.utils.to_categorical(aud_y_test, N_CLASSES)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "aud_Y_train = keras.utils.to_categorical(aud_y_train, N_CLASSES)\n",
-    "aud_Y_test = keras.utils.to_categorical(aud_y_test, N_CLASSES)"
+    "# RNN LSTM\n",
+    "def run_model():\n",
+    "    aud_X_train = aud_X_train.reshape(-1, ROWS, COLS)\n",
+    "    aud_X_test = aud_X_test.reshape(-1, ROWS, COLS)\n",
+    "    \n",
+    "    aud_model = Sequential()\n",
+    "    aud_model.add(LSTM(L1_UNITS, input_shape=(ROWS, COLS),\n",
+    "                   return_sequences=True,\n",
+    "                   activation='tanh',\n",
+    "                   recurrent_activation ='sigmoid',\n",
+    "                   unit_forget_bias=True,\n",
+    "                  ))\n",
+    "    aud_model.add(Dropout(DROPOUT[0]))\n",
+    "    # aud_model.add(Dense(L2_UNITS, activation='sigmoid'))\n",
+    "    # aud_model.add(Dropout(DROPOUT[1]))\n",
+    "    aud_model.add(LSTM(L2_UNITS, input_shape=(ROWS, COLS),\n",
+    "                   activation='tanh',\n",
+    "                   recurrent_activation ='sigmoid',\n",
+    "                   unit_forget_bias=True,\n",
+    "                  ))\n",
+    "    aud_model.add(Dropout(DROPOUT[1]))\n",
+    "    # aud_model.add(Dense(50, activation='sigmoid'))\n",
+    "    # aud_model.add(Dropout(DROPOUT[0]))\n",
+    "    aud_model.add(Dense(N_CLASSES, activation='softmax'))\n",
+    "    aud_model.compile(loss='categorical_crossentropy', optimizer='rmsprop', metrics=['accuracy'])\n",
+    "    aud_model.fit(aud_X_train, aud_Y_train,\n",
+    "             batch_size=BATCH_SIZE,\n",
+    "             epochs=EPOCHS,\n",
+    "             verbose=1,\n",
+    "             validation_data=(aud_X_test, aud_Y_test))\n",
+    "    score = aud_model.evaluate(aud_X_test, aud_Y_test, verbose=0)\n",
+    "    print(\"Score: \", score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Experiments"
    ]
   },
   {
@@ -110,80 +138,187 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score:  [2.3794573583602907, 0.49800000023841856]\n"
+      "Units: 128, Shape: (1, 135)\n",
+      "\n",
+      "Score:  [2.1139405479431153, 0.47200000095367434]\n",
+      "Units: 128, Shape: (1, 135)\n",
+      "\n",
+      "Score:  [2.1001336879730226, 0.4819999990463257]\n",
+      "Units: 128, Shape: (1, 135)\n",
+      "\n",
+      "Score:  [2.0868842124938967, 0.474]\n",
+      "Units: 128, Shape: (1, 135)\n",
+      "\n",
+      "Score:  [2.043848085403442, 0.48]\n",
+      "Units: 128, Shape: (1, 135)\n",
+      "\n",
+      "Score:  [1.9883444690704346, 0.47600000047683716]\n",
+      "Units: 128, Shape: (3, 45)\n",
+      "\n",
+      "Score:  [2.5332045249938964, 0.47200000047683716]\n",
+      "Units: 128, Shape: (3, 45)\n",
+      "\n",
+      "Score:  [2.579077726364136, 0.44]\n",
+      "Units: 128, Shape: (3, 45)\n",
+      "\n",
+      "Score:  [2.4040822868347167, 0.45]\n",
+      "Units: 128, Shape: (3, 45)\n",
+      "\n",
+      "Score:  [2.6576786098480225, 0.456]\n",
+      "Units: 128, Shape: (3, 45)\n",
+      "\n",
+      "Score:  [2.585154588699341, 0.4400000004768372]\n",
+      "Units: 128, Shape: (5, 27)\n",
+      "\n",
+      "Score:  [2.7224172916412352, 0.44799999952316283]\n",
+      "Units: 128, Shape: (5, 27)\n",
+      "\n",
+      "Score:  [2.9278279304504395, 0.4439999995231628]\n",
+      "Units: 128, Shape: (5, 27)\n",
+      "\n",
+      "Score:  [2.7030404262542724, 0.44800000023841857]\n",
+      "Units: 128, Shape: (5, 27)\n",
+      "\n",
+      "Score:  [2.6030036611557006, 0.448]\n",
+      "Units: 128, Shape: (5, 27)\n",
+      "\n",
+      "Score:  [2.70345467376709, 0.452]\n",
+      "Units: 256, Shape: (1, 135)\n",
+      "\n",
+      "Score:  [2.2358453121185304, 0.5060000009536744]\n",
+      "Units: 256, Shape: (1, 135)\n",
+      "\n",
+      "Score:  [2.2468125095367433, 0.5100000009536744]\n",
+      "Units: 256, Shape: (1, 135)\n",
+      "\n",
+      "Score:  [2.3582010307312014, 0.5120000004768371]\n",
+      "Units: 256, Shape: (1, 135)\n",
+      "\n",
+      "Score:  [2.195756504058838, 0.5380000004768372]\n",
+      "Units: 256, Shape: (1, 135)\n",
+      "\n",
+      "Score:  [2.2113422298431398, 0.5220000009536743]\n",
+      "Units: 256, Shape: (3, 45)\n",
+      "\n",
+      "Score:  [2.8295072593688966, 0.484]\n",
+      "Units: 256, Shape: (3, 45)\n",
+      "\n",
+      "Score:  [2.8730282859802245, 0.5220000004768371]\n",
+      "Units: 256, Shape: (3, 45)\n",
+      "\n",
+      "Score:  [2.9960065422058104, 0.492]\n",
+      "Units: 256, Shape: (3, 45)\n",
+      "\n",
+      "Score:  [2.8948713703155518, 0.48999999952316287]\n",
+      "Units: 256, Shape: (3, 45)\n",
+      "\n",
+      "Score:  [2.8672010307312013, 0.48000000047683716]\n",
+      "Units: 256, Shape: (5, 27)\n",
+      "\n",
+      "Score:  [2.897181908607483, 0.5040000009536744]\n",
+      "Units: 256, Shape: (5, 27)\n",
+      "\n",
+      "Score:  [2.8985797901153565, 0.48000000095367434]\n",
+      "Units: 256, Shape: (5, 27)\n",
+      "\n",
+      "Score:  [2.992456687927246, 0.5080000004768371]\n",
+      "Units: 256, Shape: (5, 27)\n",
+      "\n",
+      "Score:  [2.905819275856018, 0.5120000004768371]\n",
+      "Units: 256, Shape: (5, 27)\n",
+      "\n",
+      "Score:  [2.7375297107696532, 0.5100000009536744]\n",
+      "Units: 512, Shape: (1, 135)\n",
+      "\n",
+      "Score:  [2.600585512161255, 0.546]\n",
+      "Units: 512, Shape: (1, 135)\n",
+      "\n",
+      "Score:  [2.426770029067993, 0.5640000009536743]\n",
+      "Units: 512, Shape: (1, 135)\n",
+      "\n",
+      "Score:  [2.606207271575928, 0.5179999995231629]\n",
+      "Units: 512, Shape: (1, 135)\n",
+      "\n",
+      "Score:  [2.5374956760406495, 0.554]\n",
+      "Units: 512, Shape: (1, 135)\n",
+      "\n",
+      "Score:  [2.7689368381500246, 0.5139999995231629]\n",
+      "Units: 512, Shape: (3, 45)\n",
+      "\n",
+      "Score:  [3.12120112991333, 0.506]\n",
+      "Units: 512, Shape: (3, 45)\n",
+      "\n",
+      "Score:  [2.8718703117370605, 0.5300000004768372]\n",
+      "Units: 512, Shape: (3, 45)\n",
+      "\n",
+      "Score:  [3.1855773735046387, 0.5260000004768371]\n",
+      "Units: 512, Shape: (3, 45)\n",
+      "\n",
+      "Score:  [3.15773468208313, 0.5140000004768371]\n",
+      "Units: 512, Shape: (3, 45)\n",
+      "\n",
+      "Score:  [3.0789549407958985, 0.5520000009536743]\n",
+      "Units: 512, Shape: (5, 27)\n",
+      "\n",
+      "Score:  [3.283363397598267, 0.4980000004768372]\n",
+      "Units: 512, Shape: (5, 27)\n",
+      "\n",
+      "Score:  [3.243034704208374, 0.5160000009536743]\n",
+      "Units: 512, Shape: (5, 27)\n",
+      "\n",
+      "Score:  [3.3991524887084963, 0.5260000004768371]\n",
+      "Units: 512, Shape: (5, 27)\n",
+      "\n",
+      "Score:  [3.1581736907958984, 0.5100000004768371]\n",
+      "Units: 512, Shape: (5, 27)\n",
+      "\n",
+      "Score:  [3.0494480094909666, 0.5300000009536743]\n"
      ]
     }
    ],
    "source": [
-    "# RNN LSTM\n",
-    "aud_model = mh.build_and_compile(h_units=H_UNITS, inp_shape=(ROWS, COLS), n_classes=N_CLASSES)\n",
-    "aud_model.fit(aud_X_train, aud_Y_train,\n",
-    "         batch_size=BATCH_SIZE,\n",
-    "         epochs=EPOCHS,\n",
-    "         verbose=0,\n",
-    "         validation_data=(aud_X_test, aud_Y_test))\n",
-    "score = aud_model.evaluate(aud_X_test, aud_Y_test, verbose=0)\n",
-    "print(\"Score: \", score)"
+    "units = [128, 256, 512]\n",
+    "shapes = [(1, 135), (3, 45), (5, 27)]\n",
+    "\n",
+    "for i, u in enumerate(units):\n",
+    "    for j, s in enumerate(shapes):\n",
+    "        accs = np.zeros(shape=(5,), dtype='float64')\n",
+    "        for i in range(5):\n",
+    "            print('Units: {}, Shape: {}\\n'.format(u, s))\n",
+    "            aud_X_train = aud_X_train.reshape(-1, s[0], s[1])\n",
+    "            aud_X_test = aud_X_test.reshape(-1, s[0], s[1])\n",
+    "\n",
+    "            aud_model = Sequential()\n",
+    "            aud_model.add(LSTM(u, input_shape=s,\n",
+    "                           return_sequences=True,\n",
+    "                           activation='tanh',\n",
+    "                           recurrent_activation ='sigmoid',\n",
+    "                           unit_forget_bias=True,\n",
+    "                          ))\n",
+    "            aud_model.add(Dropout(DROPOUT[0]))\n",
+    "            aud_model.add(LSTM(u, input_shape=s,\n",
+    "                           activation='tanh',\n",
+    "                           recurrent_activation ='sigmoid',\n",
+    "                           unit_forget_bias=True,\n",
+    "                          ))\n",
+    "            aud_model.add(Dropout(DROPOUT[1]))\n",
+    "            aud_model.add(Dense(N_CLASSES, activation='softmax'))\n",
+    "            aud_model.compile(loss='categorical_crossentropy', optimizer='rmsprop', metrics=['accuracy'])\n",
+    "            aud_model.fit(aud_X_train, aud_Y_train,\n",
+    "                     batch_size=BATCH_SIZE,\n",
+    "                     epochs=EPOCHS,\n",
+    "                     verbose=0,\n",
+    "                     validation_data=(aud_X_test, aud_Y_test))\n",
+    "            score = aud_model.evaluate(aud_X_test, aud_Y_test, verbose=0)\n",
+    "            print('Score: ', score)\n",
+    "            acc = score[1]\n",
+    "            with open('metrics.txt', 'a') as outfile:\n",
+    "                outfile.write('Units: {}, Shape: {}, Accuracy: {}\\n'.format(u, s, acc))\n",
+    "            accs[i] = acc\n",
+    "        with open('metrics.txt', 'a') as outfile:\n",
+    "            outfile.write('Average Acc for [Units: {}, Shape: {}]: {}\\n'.format(u, s, accs.mean()))\n",
+    "        accs[:] = 0"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import seaborn as sb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "preds = aud_model.predict_classes(aud_X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pred_labs = np.array([titles[lab] for lab in preds])\n",
-    "true_labs = np.array([titles[y] for y in aud_y_test])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cm = confusion_matrix(aud_y_test, preds)\n",
-    "mh.make_heatmap(cm, 'Accuracy', 'heatmap.png')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
