--- a/RNN/aud_RNN.ipynb
+++ b/RNN/aud_RNN.ipynb
@@ -319,6 +319,58 @@
     "            outfile.write('Average Acc for [Units: {}, Shape: {}]: {}\\n'.format(u, s, accs.mean()))\n",
     "        accs[:] = 0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [1, 2, 3]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([[1, 2, 3], [1, 2, 3]])\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 2., 3.])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avgs = a.mean(axis=0)\n",
+    "avgs"
+   ]
   }
  ],
  "metadata": {
